# 2d-platformer

./: .gitignore  CMakeLists.txt  README.md
include/engine/: entities.hpp
src/: main.cpp
src/collision/: collision.cpp  collision.hpp
src/engine/: collision.cpp  collision.hpp  physics.cpp  physics.hpp
src/entities/: entities.hpp
src/keybindings/: keybindings.cpp  keybindings.hpp
src/pch/: minimal-2d-platformer-sdl2-pch.hpp
src/physics/: physics.cpp  physics.hpp
